syntax = "proto3";

import "math.proto";
import "fuelNames.proto";

option java_package = "ca.wise.fuel.proto";
option csharp_namespace = "WISE.FuelProto";
option java_multiple_files = true;

package WISE.FuelProto;

message CfbC1 {
	int32 version = 1;
	
	oneof msg {
		FuelName default = 2;
		Parms parms = 3;
	}
	
	message Parms {
		int32 version = 1;
		Math.Double csiMultiplier = 2;
		Math.Double csiCbhExponent = 3;
		Math.Double csiExpAdder = 4;
		Math.Double csiExpMultiplier = 5;
		Math.Double csiPower = 6;
		Math.Double rsoDiv = 7;
		Math.Double cfbExp = 8;
		bool cfbPossible = 9;
	}
}

message CfbD2 {
	int32 version = 1;
	
	oneof msg {
		FuelName default = 2;
		Parms parms = 3;
	}
	
	message Parms {
		int32 version = 1;
	}
}